2002-09-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/stem-engraver.cc (acknowledge_grob): rename evented back to
	requested.

2002-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/ : rename Request to Event

	* lily/parser.yy (command_element): move clef stuff into Scheme.

	* lily/:  rename length_mom () to get_length()

	* lily/part-combine-music.cc: removed file and class.

	* lily/context-specced-music-iterator.cc (class
	Context_specced_music_iterator): new file. Obsoletes the
	Context_specced_music type.

	* scm/music-types.scm (make-repeated-music): put different kinds
	of repeated music into music-type table.

	* VERSION: 1.7.1 released.

	* scm/to-xml.scm: new file.

	* input/test/to-xml.ly (fooBar): demo of what is possible with the
	new Input representation: dump music as XML.

	* scm/engraver-documentation-lib.scm
	(engraver-accepts-music-types?): add links from music to engraver,
	from music-type to engraver.

	* lily/include/command-request.hh: removed
	lily/include/musical-request.hh: removed. Removed all _req classes
	except Key_change_req. Changes throughout.

2002-09-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/tuplet-engraver.cc (try_music): Compile kludge.

2002-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc: specify accepts for many engravers.

	* scm/music-documentation-lib.scm: dump music expressions and
	music subtypes.

	* scm/documentation-lib.scm: complete revision.
	Use GOOPS objects to store document tree explicitly. Cleaned up and
	sped up doco generation a lot.

2002-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/trip.ly (fugaIILeft): add arpeggio

	* lily/translator-group.cc (try_music_on_nongroup_children):
	oops. The name symbol is in the cdr of the assoc handle.

	* lily/:  remove Arpeggio_req, Breathing_sign_req, Extender_req,
	Hyphen_req, Glissando_req, Break_req, Mark_req 

2002-09-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/musical-request.cc (music-duration-length,